# spaceshootan

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/components/: ExplosionParticle.h  GarbageMark.h  GraphicObject.h  Health.h  Id.h  LocalPlayer.h  Mass.h  NetworkingC.h  Packet.h  PhysicalObject.h  PositionVelocity.h  RemotePlayer.h  RenderMethod.h  RotationVelocity.h  Window.h  WindowEvent.h
src/garbage/: GarbageCleaner.cpp  GarbageCleaner.h
src/level/: LevelGenerator.cpp  LevelGenerator.h
src/networking/: NetClient.cpp  NetServer.cpp  NetSystem.cpp  NetSystem.h  Netw.h  Networking.cpp  Networking.h
src/networking/packet/: Connection.cpp  Connection.h  Position.cpp  Position.h  SetId.cpp  SetId.h  Shoot.cpp  Shoot.h
src/physics/: CollisionHandler.cpp  CollisionHandler.h  GravitationSystem.cpp  GravitationSystem.h  HealthSystem.cpp  HealthSystem.h  VelocitySystem.cpp  VelocitySystem.h
src/playerlogic/: PlayerController.cpp  PlayerController.h  ViewController.cpp  ViewController.h
src/rendering/: Renderer.cpp  Renderer.h
src/rendering/Gui/: ConnectionMenu.cpp  ConnectionMenu.h
src/utils/: ecs.h  impl.h  logger.h
